force-app/main/default/objects/ObjectiveManagement__c/ObjectiveManagement__c.object-meta.xml
<CustomObject>
    <label>目標管理</label>
    <nameField>
        <label>目標管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>