force-app/main/default/objects/ObjectiveManagement__c/fields/ObjectiveManagement__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>目標管理</label>
    <referenceTo>ObjectiveManagement__c</referenceTo>
    <relationshipLabel>目標管理</relationshipLabel>
    <relationshipName>ObjectiveManagementList</relationshipName>
    <type>Lookup</type>
</CustomField>