force-app/main/default/objects/ObjectiveManagement__c/fields/OutputFileName_F__c.field-meta.xml
<CustomField>
    <fullName>OutputFileName_F__c</fullName>
    <formula>&quot;運送売上日報_&quot; +  SUBSTITUTE(TEXT(TODAY()), &quot;-&quot;, &quot;&quot;) &amp;MID(TEXT(NOW()+ (9/24)), 12, 2) &amp;MID(TEXT(NOW() + (9/24)), 15, 2) &amp;MID(TEXT(NOW() + (9/24)), 18, 2)</formula>
    <label>帳票ファイル名</label>
    <type>Text</type>
</CustomField>