force-app/main/default/objects/ObjectiveManagement__c/fields/SameMonthLastYearTotalSales__c.field-meta.xml
<CustomField>
    <fullName>SameMonthLastYearTotalSales__c</fullName>
    <label>前年同月実績（移行）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>