force-app/main/default/objects/ObjectiveManagement__c/fields/SameMonthLastYearTotalSales_F__c.field-meta.xml
<CustomField>
    <fullName>SameMonthLastYearTotalSales_F__c</fullName>
    <formula>IF (  ISBLANK(ObjectiveManagement__c)  ,  SameMonthLastYearTotalSales__c ,  ObjectiveManagement__r.TotalSales_Sum__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>前年同月実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>