force-app/main/default/objects/ObjectiveManagement__c/fields/SameMonthLastYearTotalSubcontractorSales__c.field-meta.xml
<CustomField>
    <fullName>SameMonthLastYearTotalSubcontractorSales__c</fullName>
    <label>前年同月実績下払い（移行）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>