force-app/main/default/objects/ObjectiveManagement__c/fields/SameMonthLastYearTotalSubcontractSales_F__c.field-meta.xml
<CustomField>
    <fullName>SameMonthLastYearTotalSubcontractSales_F__c</fullName>
    <formula>IF (ISBLANK(ObjectiveManagement__c)  ,   SameMonthLastYearTotalSubcontractorSales__c ,   ObjectiveManagement__r.TotalSubcontractorSales_Sum__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>前年同月実績下払い</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>