force-app/main/default/objects/ObjectiveManagement__c/fields/SecondTermSalesTarget__c.field-meta.xml
<CustomField>
    <fullName>SecondTermSalesTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>第2期目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>