force-app/main/default/objects/ObjectiveManagement__c/fields/TargetMonth__c.field-meta.xml
<CustomField>
    <fullName>TargetMonth__c</fullName>
    <label>対象月</label>
    <required>true</required>
    <type>Date</type>
</CustomField>