force-app/main/default/objects/ObjectiveManagement__c/fields/TotalSales_Sum__c.field-meta.xml
<CustomField>
    <fullName>TotalSales_Sum__c</fullName>
    <label>当月実績</label>
    <summarizedField>ShippingSalesReport__c.TotalSales_F__c</summarizedField>
    <summaryForeignKey>ShippingSalesReport__c.ObjectiveManagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>