force-app/main/default/objects/ObjectiveManagement__c/fields/TotalSubcontractorSales_Sum__c.field-meta.xml
<CustomField>
    <fullName>TotalSubcontractorSales_Sum__c</fullName>
    <label>当月実績下払い</label>
    <summarizedField>ShippingSalesReport__c.TotalSubcontractorSales_F__c</summarizedField>
    <summaryForeignKey>ShippingSalesReport__c.ObjectiveManagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>