force-app/main/default/objects/ObjectiveManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TargetMonth__c</columns>
    <columns>FirstTermSalesTarget__c</columns>
    <columns>SecondTermSalesTarget__c</columns>
    <columns>ThirdTermSalesTarget__c</columns>
    <columns>TotalSales_Sum__c</columns>
    <columns>TotalSubcontractorSales_Sum__c</columns>
    <columns>SameMonthLastYearTotalSales_F__c</columns>
    <columns>SameMonthLastYearTotalSubcontractSales_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>